--- a/data/devices.cfg
+++ b/data/devices.cfg
@@ -1,4 +1,12 @@
-; Template configuration for your MiFlora devices.
+; Example configuration for your MiFlora devices.
+; Notes: 
+;        The min_<attribute> and max_<attribute> settings are optional, they will not be used
+;        if not present. When configured, the UI will show these values in orange when off limits.
+;
+;        The plant ID must be a numerical value, not greather that the total number of plants.
+;        You can use it to as a numerical label that you can write on your MiFlora devices, for
+;        quick identification.
+;
 [C4:7C:8D:6A:5C:FF]
 name = Palmier
 id   = 1
